Big margins, nice-looking, but uses grid

--- a/gridWebsite/grid/templates/grid/home.html
+++ b/gridWebsite/grid/templates/grid/home.html
@@ -4,12 +4,26 @@
 
 <h1 class= "romeltitlefont">Homepage</h1>
 
-<div class=romels-container-container>
+<div class=romels-home-container>
+
 	<div class="romels-container">
-		<div id="romelsid"><p class="display-1">Home.Html</p></div>
-		<div id="romelsnavbar"><p class="display-1">Nav</p></div>
-		<div id="romelsmain"><p class="display-1">Main</p></div>
-		<div id="romelsfooter"><p class="display-1">Footer</p></div>
+
+		<div id="romelsid">
+			<p class="display-1">Home.Html</p>
+		</div>
+
+		<div id="romelsnavbar">
+			<p class="display-1">Nav</p>
+		</div>
+
+		<div id="romelsmain">
+			<p class="display-1">Main</p>
+		</div>
+
+		<div id="romelsfooter">
+			<p class="display-1">Footer</p>
+		</div>
+
 	</div>
 </div>
 
