--- a/gridWebsite/grid/templates/grid/simpleweeklygrid.html
+++ b/gridWebsite/grid/templates/grid/simpleweeklygrid.html
@@ -2,203 +2,203 @@
 
 {% block container-content %}
 
-<div class=romels-weekly-container>
+<div class=romels-weekly-container-v2>
 	<div class="romels-weekly-v2">
 
 		<div class="simplegrid001">
-			<div class="lead">Monday</div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Monday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid002">
-			<div class="lead">Tuesday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Tuesday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid003">
-			<div class="lead">Wednesday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Wednesday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid004">
-			<div class="lead">Thursday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Thursday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid005">
-			<div class="lead">Friday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Friday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid006">
-			<div class="lead">Saturday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Saturday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 		<div class="simplegrid007">
-			<div class="lead">Sunday</p></div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
-			<div class="item"> {__replace__} </div>
+			<div class="itemr"><p class="lead">Sunday</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
+			<div class="itemr"><p class="lead">{__replace__}</p></div>
 		</div>
 
 	</div>
