--- a/gridWebsite/grid/templates/grid/grid4.html
+++ b/gridWebsite/grid/templates/grid/grid4.html
@@ -2,10 +2,10 @@
 
 {% block container-content %}
 
-<div class=romels-weekly-container-v3>
-	<div class="romels-weekly-v3">
+<div class=romels-weekly-container-v4>
+	<div class="romels-weekly-v4">
 
-		<div class="simplegridver2">
+		<div class="simplegrid001">
 			<div class="itemr"><p class="leadr">Monday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -33,7 +33,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid002">
 			<div class="itemr"><p class="leadr">Tuesday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -61,7 +61,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid003">
 			<div class="itemr"><p class="leadr">Wednesday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -89,7 +89,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid004">
 			<div class="itemr"><p class="leadr">Thursday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -117,7 +117,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid005">
 			<div class="itemr"><p class="leadr">Friday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -145,7 +145,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid006">
 			<div class="itemr"><p class="leadr">Saturday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -173,7 +173,7 @@
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 		</div>
 
-		<div class="simplegridver2">
+		<div class="simplegrid007">
 			<div class="itemr"><p class="leadr">Sunday</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
 			<div class="itemr"><p class="leadr">{__replace__}</p></div>
@@ -203,5 +203,20 @@
 
 	</div>
 </div>
+
+<!--
+			
+	my idea is to run a for loop within these
+	divs
+
+	{% for each in cellsDatesAndSuch %}
+	<div></div>
+	{% endfor%}
+
+
+	something like that..
+	Am still working on the idea for now. 
+
+-->
 
 {% endblock %}
