this is a funny rendetion of an excel table: by accident

--- a/gridWebsite/grid/templates/grid/tutorial.html
+++ b/gridWebsite/grid/templates/grid/tutorial.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static '/css/secondary.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static '/css/secondary.css' %}">
   <title>CSS Grid Alignment + Centering!</title>
 </head>
 
