created a new file called test2.html and test2.css: also added views and a url pattern

--- a/gridWebsite/grid/templates/grid/test2.html
+++ b/gridWebsite/grid/templates/grid/test2.html
@@ -21,53 +21,53 @@
 	</div>
 	<div class="griditself1">
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 		<div class="griditems1">
-			<div>06:00am</div>
-			<div>07:00am</div>
-			<div>08:00am</div>
-			<div>09:00am</div>
-			<div>10:00am</div>
+			<div class="time">06:00am</div>
+			<div class="time">07:00am</div>
+			<div class="time">08:00am</div>
+			<div class="time">09:00am</div>
+			<div class="time">10:00am</div>
 		</div>
 	</div>
 
