not sure what I did: but this is a save before I move on to learning database on another project

--- a/gridWebsite/grid/templates/grid/test2.html
+++ b/gridWebsite/grid/templates/grid/test2.html
@@ -3,74 +3,345 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width"/>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	<title>Test 2</title>
 	<link rel="stylesheet" type="text/css" href="{% static '/css/test2.css' %}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-	<h1>hello world</h1>
-	<div class="griditself">
-		<div class="griditems">1</div>
-		<div class="griditems">2</div>
-		<div class="griditems">3</div>
-		<div class="griditems">4</div>
-		<div class="griditems">5</div>
-		<div class="griditems">6</div>
-		<div class="griditems">7</div>
+	<br>
+	<br>
+	<br>
+	<table class="table table-striped">
+		<thead class="thead-dark">
+			<tr>
+				<th scope="col">Mon</th>
+				<th scope="col">Tue</th>
+				<th scope="col">Wed</th>
+				<th scope="col">Thu</th>
+				<th scope="col">Fri</th>
+				<th scope="col">Sat</th>
+				<th scope="col">Sun</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+				<td>06:00 am</td>
+			</tr>
+			<tr>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+				<td>06:30 am</td>
+			</tr>
+			<tr>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+				<td>07:00 am</td>
+			</tr>
+			<tr>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+				<td>07:30 am</td>
+			</tr>
+			<tr>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+				<td>08:00 am</td>
+			</tr>
+		</tbody>
+	</table>
+	<br>
+	<br>
+	<br>
+	<table class="table table-striped">
+		<thead class="thead-dark">
+			<tr>
+				<th scope="col">Line</th>
+				<th scope="col">R #1</th>
+				<th scope="col">R #2</th>
+				<th scope="col">R #3</th>
+				<th scope="col">R #4</th>
+				<th scope="col">R #5</th>
+				<th scope="col">R #6</th>
+				<th scope="col">R #7</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th scope="row">1</th>
+				<td>Jul</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">2</th>
+				<td></td>
+				<td>Rosario</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td>Rosario</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">4</th>
+				<td></td>
+				<td></td>
+				<td>Rosario</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>Julius</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">6</th>
+				<td></td>
+				<td>Cesar</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>Cesar</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
+		<br>
+	<br>
+	<br>
+	<div class="">
+		<table class="table table-striped">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">Line</th>
+					<th scope="col">R #1</th>
+					<th scope="col">R #2</th>
+					<th scope="col">R #3</th>
+					<th scope="col">R #4</th>
+					<th scope="col">R #5</th>
+					<th scope="col">R #6</th>
+					<th scope="col">R #7</th>
+					<th scope="col">Heading</th>
+					<th scope="col">Heading</th>
+					<th scope="col">Heading</th>
+					<th scope="col">Heading</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">1</th>
+					<td>Jul</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">2</th>
+					<td></td>
+					<td>Rosario</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">3</th>
+					<td>Rosario</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">4</th>
+					<td></td>
+					<td></td>
+					<td>Rosario</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">5</th>
+					<td>Julius</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">6</th>
+					<td></td>
+					<td>Cesar</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">7</th>
+					<td>Cesar</td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">8</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">9</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">10</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<th scope="row">11</th>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-	<div class="griditself1">
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-		<div class="griditems1">
-			<div class="time">06:00am</div>
-			<div class="time">07:00am</div>
-			<div class="time">08:00am</div>
-			<div class="time">09:00am</div>
-			<div class="time">10:00am</div>
-		</div>
-	</div>
-
 </body>
 
 </html>
